--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="#contact">Contact</a>
         </nav>
     </header>
-    <main>
+    <main>  
         <h1>Tytuł strony</h1>
         <article>
             <h2>Tytuł artykułu</h2>
@@ -33,6 +33,47 @@
 Podkreślony tekst
 
 </u></pre>
+<table>
+    <caption>
+      Front-end web developer course 2021
+    </caption>
+    <thead>
+      <tr>
+        <th scope="col">Person</th>
+        <th scope="col">Most interest in</th>
+        <th scope="col">Age</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">Chris</th>
+        <td>HTML tables</td>
+        <td>22</td>
+      </tr>
+      <tr>
+        <th scope="row">Dennis</th>
+        <td>Web accessibility</td>
+        <td>45</td>
+      </tr>
+      <tr>
+        <th scope="row">Sarah</th>
+        <td>JavaScript frameworks</td>
+        <td>29</td>
+      </tr>
+      <tr>
+        <th scope="row">Karen</th>
+        <td>Web performance</td>
+        <td>36</td>
+      </tr>
+    </tbody>
+    <tfoot>
+      <tr>
+        <th scope="row" colspan="2">Average age</th>
+        <td>33</td>
+      </tr>
+    </tfoot>
+  </table>
+  
         <table>
             <caption>
                 <h2>Tytuł Tabeli</h2>
