--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Strona2</title>
     <link rel="stylesheet" href="dist/styles.css">
-    <link rel="stylesheet" href="styles.css"> 
-
 </head>
 
 <body>
@@ -23,7 +21,7 @@
        
         <article>
             <h2>Tytuł artykułu</h2>
-            <p class="text-blue-500">1 paragraf artykułu zawierający
+            <p class="text-orange-500">1 paragraf artykułu zawierający
                 <s>skreślony tekst</s>
             </p>
             <p class="text-green-500">drugi paragraf artykułu zawierający <strong>pogrubiony tekst</strong> </p>
@@ -81,7 +79,7 @@ Podkreślony tekst
             </ol>
         </details>
         <h2>Dodawanie obrazka do strony</h2>
-        <img src="aston.jpg" alt="DB5" width="400">
+        <img src="src/aston.jpg" alt="DB5" width="400">
 
         <h2>Formularz</h2>
         <form action="submit_form" method="post">
@@ -120,7 +118,7 @@ Podkreślony tekst
         <p>Postęp: 45%</p>
         <h2>De dust</h2>
         
-        <img src="de_dust1.jpg" width="400"  alt="Mapa csik" usemap="#dust" >
+        <img src="src/de_dust1.jpg" width="400"  alt="Mapa csik" usemap="#dust" >
         <map name="dust">
             <area shape="rect" coords="140,60,200,210" alt="Obszar prostokątny" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
             <area shape="circle" coords="30,155,30" alt="bomb side B" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
