--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Strona2</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="dist/styles.css">
 </head>
 
@@ -90,7 +91,6 @@ Podkreślony tekst
             <input type="text" id="name" name="name" required>
             <br><br>
 
-            <!-- Select Dropdown with Option Groups -->
             <label for="options">Wybierz opcję:</label>
             <select id="options" name="options">
                 <optgroup label="Grupa 1">
