--- a/index.html
+++ b/index.html
@@ -133,17 +133,30 @@ Podkreślony tekst
             <area shape="circle" coords="30,155,30" alt="bomb side B" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
             <area shape="circle" coords="180,255,40" alt="bombside A" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
         </map>
-        <h3 style="align-items: center;">Flex row</h3>
+        <h3 style="display: flex; align-items: center; justify-content: center;">Flex row</h3>
         <div class="container">
             <div class="box">1</div>
             <div class="box">2</div>
             <div class="box">3</div>
           </div>
+          <h3 style="display: flex; align-items: center; justify-content: center;">Flex column</h3>
 
           <div class="container" style="flex-direction: column;">
             <div class="box">1</div>
             <div class="box">2</div>
             <div class="box">3</div>
+          </div>
+
+       
+
+          <div class="flex">
+            <div class="box2 w-50">
+              without argument
+            </div>
+            <div class="boxnone w-64">
+              flex none
+            </div>
+            <div class="box1 w-100">flex auto</div>
           </div>
     </main>
     <footer class="bg-yellow-500 text-green-900">
