--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ Podkreślony tekst
           </div>
 
        
-
+<h3>Flex auto i none</h3>
           <div class="flex">
             <div class="box2 w-50">
               without argument
@@ -156,7 +156,7 @@ Podkreślony tekst
             <div class="boxnone w-64">
               flex none
             </div>
-            <div class="box1 w-100">flex auto</div>
+            <div class="box1 w-80">flex auto</div>
           </div>
     </main>
     <footer class="bg-yellow-500 text-green-900">
