--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@ Podkreślony tekst
             <br><br>
 
             
-            <div class="w-12  bg-orange-200 rounded-full animate-ping">
-            <button type="submit">Wyślij</button></div>
+            <div class="w-20  bg-orange-200 rounded-full animate-ping">
+            <button type="submit" style=" padding: 10px 20px;">Wyślij</button></div>
             <br>
         </form>
 <br>
@@ -169,5 +169,7 @@ Podkreślony tekst
     </main>
     <footer class="bg-yellow-500 text-green-900">
         <p>To jest stópka</p>
+        <br>
+        <br>
     </footer>
 </body>
