--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <main>  
        
-        <article>
+        <article  style="margin: 20px;">
             <h2>Tytuł artykułu</h2>
             <p class="text-orange-500">1 paragraf artykułu zawierający
                 <s>skreślony tekst</s>
@@ -31,12 +31,12 @@
             </p>
         </article>
 
-        <pre style="font-family: Arial, Helvetica, sans-serif;"><u>
+        <pre style="margin: 20px;"><u>
 Podkreślony tekst
 
 </u></pre>
   
-        <table class="table-auto">
+        <table class="table-auto" style="margin: 20px;">
             <caption>
                 <h2>Tytuł Tabeli</h2>
             </caption>
@@ -69,7 +69,7 @@ Podkreślony tekst
             </tbody>
         </table>
         <br>
-        <details>
+        <details style="margin: 20px;">
             <summary>Przepis na grog</summary>
             <ol type="I">
                 <li>Weź kubek o pojemności ok. 300 ml</li>
@@ -83,12 +83,14 @@ Podkreślony tekst
         </details>
         <br>
         <h2>Dodawanie obrazka do strony</h2>
-        <img src="src/aston.jpg" alt="DB5" width="400">
+        <img src="src/aston.jpg" alt="DB5" width="400" style="margin: 20px;">
         <br>
+
+
         <h2 class="w-auto text-center rounded-lg bg-orange-400">Formularz</h2>
 
 
-        <form class="bg-orange-300" action="submit_form" method="post">
+        <form class="bg-orange-300 rounded-lg"  action="submit_form" method="post" style="margin: 20px;">
             <label for="name">Imię:</label>
             <input class="bg-orange-200" type="text" id="name" name="name" required>
             <br><br>
@@ -114,23 +116,21 @@ Podkreślony tekst
 <br>
         <h2>Paski postępu dla zadań</h2>
 
-
+    <div class="shadow-md inline-block" style="margin: 20px;">
         <h3>Zadanie 1</h3>
-        <div class="shadow-md inline-block">
         <progress value="70" max="100"></progress>
         <p>Postęp: 70%</p>
         </div>
 
-
+    <div class="shadow-md inline-block" style="margin: 20px;">
         <h3>Zadanie 2</h3>
-        <div class="shadow-md inline-block">
         <progress value="45" max="100"></progress>
         <p>Postęp: 45%</p>
         </div>
         <br><br>
         <h2>De dust</h2>
         
-        <img src="src/de_dust1.jpg" width="400"  alt="Mapa csik" usemap="#dust" >
+        <img style="margin: 20px;" src="src/de_dust1.jpg" width="400"  alt="Mapa csik" usemap="#dust" >
         <map name="dust">
             <area shape="rect" coords="140,60,200,210" alt="Obszar prostokątny" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
             <area shape="circle" coords="30,155,30" alt="bomb side B" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
@@ -168,7 +168,7 @@ Podkreślony tekst
         </svg><br>
     </main>
     <footer class="bg-yellow-500 text-green-900">
-        <p>To jest stópka</p>
+        <p style="margin: 20px;">To jest stópka</p>
         <br>
         <br>
     </footer>
