--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-    <header style="background-color: #96D4D4;padding: 1rem;"">
+    <header style="background-color: #96D4D4;">
         <h1>Moja Strona Internetowa</h1>
-        <nav>
+        <nav style="margin: 2rem;">
             <a href="#home">Home</a> |
             <a href="#about">About</a> |
             <a href="#contact">Contact</a>
@@ -152,22 +152,21 @@ Podkreślony tekst
 
        
 <h3>Flex auto i none</h3>
-          <div class="flex">
-            <div class="box2 w-50">
-              without argument
-            </div>
-            <div class="boxnone w-64">
-              flex none
-            </div>
-            <div class="box1 w-80">flex auto</div>
-          </div>
+          
+
+<div class="flex">
+    <div class="flex-none w-20 bg-blue-300 text-center mr-4" style="margin-right: 0.75rem; margin-left: 1.25rem;">Flex none</div>
+    <div class="flex-auto w-32 bg-blue-500 text-center mr-4">auto</div>
+    <div class="flex-none w-32 bg-blue-700 text-center">none</div>
+</div>
+
           <br>
           <svg width="200" height="200" viewBox="0 0 200 200">
             <polygon points="100,10 120,70 180,70 130,110 150,170 100,140 50,170 70,110 20,70 80,70" 
                      fill="gold" stroke="black" stroke-width="2"/>
         </svg><br>
     </main>
-    <footer class="bg-yellow-500 text-green-900">
+    <footer class="text-black-900" style="background-color: #96D4D4;padding: 1rem;">
         <p style="margin: 20px;">To jest stópka</p>
         <br>
         <br>
